Crash on rendering #40299

Closed
opened 2014-05-21 17:27:49 +02:00 by Vilem Duha · 10 comments
Member

System Information
Operating system and graphics card

Blender Version
Broken: 0865b4f
Worked: (optional)

Short description of error
crash on hitting f12 after opening the file. Not sure about the source. There are metaballs in the scene, with parents on hidden layer, and there is a particle system on hidden layer.
If enablingh the layers, it renders.

Exact steps for others to reproduce the error
open, hit f12!

file is here:
meiosis.blend

**System Information** Operating system and graphics card **Blender Version** Broken: 0865b4f Worked: (optional) **Short description of error** crash on hitting f12 after opening the file. Not sure about the source. There are metaballs in the scene, with parents on hidden layer, and there is a particle system on hidden layer. If enablingh the layers, it renders. **Exact steps for others to reproduce the error** open, hit f12! file is here: [meiosis.blend ](http://plant.ffa.vutbr.cz/~novak/dwnflz/meioza04_bug.blend)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @VilemDuha

Added subscriber: @VilemDuha
Lukas Tönne was assigned by Bastien Montagne 2014-05-21 18:07:45 +02:00

Added subscriber: @mont29

Added subscriber: @mont29

Crash confirmed, but not sure that (huge!) file is valid, it spit a bunch of depsgraph errors…

Anyway, gets a NULL dm, so segfaults:

P64: (An Untitled Masterwork)

Program received signal SIGSEGV, Segmentation fault.
[Switching to Thread 0x7fffca25b700 (LWP 3481)]
0x00000000037229fe in psys_map_index_on_dm (dm=0x0, from=2, index=1, index_dmcache=-1, fw=0x7fffcab2b8a8, UNUSED_foffset=1,37508976, mapindex=0x7fffca258ac0, mapfw=0x7fffca258b40)
    at /home/i7deb64/blender-2.5-svn/__work__/src/source/blender/blenkernel/intern/particle.c:1724
1724		if (dm->deformedOnly || index_dmcache == DMCACHE_ISCHILD) {
(gdb) bt
#0  0x00000000037229fe in psys_map_index_on_dm (dm=0x0, from=2, index=1, index_dmcache=-1, fw=0x7fffcab2b8a8, UNUSED_foffset=1,37508976, mapindex=0x7fffca258ac0, mapfw=0x7fffca258b40)
    at /home/i7deb64/blender-2.5-svn/__work__/src/source/blender/blenkernel/intern/particle.c:1724
#1  0x0000000003722f7b in psys_particle_on_dm (dm=0x0, from=2, index=1, index_dmcache=-1, fw=0x7fffcab2b8a8, foffset=1,37508976, vec=0x7fffca258cb0, nor=0x0, utan=0x0, vtan=0x0, 
    orco=0x601e008e7ec8, ornor=0x0) at /home/i7deb64/blender-2.5-svn/__work__/src/source/blender/blenkernel/intern/particle.c:1788
#2  0x0000000003724172 in psys_particle_on_emitter (psmd=0x601c000670c8, from=2, index=1, index_dmcache=-1, fuv=0x7fffcab2b8a8, foffset=1,37508976, vec=0x7fffca258cb0, nor=0x0, utan=0x0, 
    vtan=0x0, orco=0x601e008e7ec8, ornor=0x0) at /home/i7deb64/blender-2.5-svn/__work__/src/source/blender/blenkernel/intern/particle.c:1920
#3  0x00000000037436c8 in psys_get_dupli_texture (psys=0x603a000d3e48, part=0x603e0044c6c8, psmd=0x601c000670c8, pa=0x7fffcab2b808, cpa=0x0, uv=0x601e008e7ed4, orco=0x601e008e7ec8)
    at /home/i7deb64/blender-2.5-svn/__work__/src/source/blender/blenkernel/intern/particle.c:4525
#4  0x00000000036f2933 in make_duplis_particle_system (ctx=0x7fffca259790, psys=0x603a000d3e48)
    at /home/i7deb64/blender-2.5-svn/__work__/src/source/blender/blenkernel/intern/object_dupli.c:1104
#5  0x00000000036f2dc1 in make_duplis_particles (ctx=0x7fffca2598e0) at /home/i7deb64/blender-2.5-svn/__work__/src/source/blender/blenkernel/intern/object_dupli.c:1143
#6  0x00000000036f32c4 in object_duplilist_ex (eval_ctx=0x6004001eda78, scene=0x606600097508, ob=0x604a003c9c08, update=false)
    at /home/i7deb64/blender-2.5-svn/__work__/src/source/blender/blenkernel/intern/object_dupli.c:1203
#7  0x00000000037dca5d in BKE_scene_base_iter_next (eval_ctx=0x6004001eda78, iter=0x7fffca259cd0, scene=0x7fffca259b10, val=1, base=0x7fffca259b50, ob=0x7fffca259b90)
    at /home/i7deb64/blender-2.5-svn/__work__/src/source/blender/blenkernel/intern/scene.c:878
#8  0x000000000364845b in mball_count (eval_ctx=0x6004001eda78, process=0x7fffca259e00, scene=0x606600097508, basis=0x604a003f4d08)
    at /home/i7deb64/blender-2.5-svn/__work__/src/source/blender/blenkernel/intern/mball.c:2234
#9  0x00000000036485ea in BKE_mball_polygonize (eval_ctx=0x6004001eda78, scene=0x606600097508, ob=0x604a003f4d08, dispbase=0x6008002a5c58)
    at /home/i7deb64/blender-2.5-svn/__work__/src/source/blender/blenkernel/intern/mball.c:2280
#10 0x00000000034d14ad in BKE_displist_make_mball (eval_ctx=0x6004001eda78, scene=0x606600097508, ob=0x604a003f4d08)
    at /home/i7deb64/blender-2.5-svn/__work__/src/source/blender/blenkernel/intern/displist.c:731
#11 0x00000000036e4858 in BKE_object_handle_update_ex (eval_ctx=0x6004001eda78, scene=0x606600097508, ob=0x604a003f4d08, rbw=0x0, do_proxy_update=true)
    at /home/i7deb64/blender-2.5-svn/__work__/src/source/blender/blenkernel/intern/object.c:2931
#12 0x00000000037dec4f in scene_update_all_bases (eval_ctx=0x6004001eda78, scene=0x606600097508, scene_parent=0x606600097508)
    at /home/i7deb64/blender-2.5-svn/__work__/src/source/blender/blenkernel/intern/scene.c:1296
#13 0x00000000037df9f6 in scene_update_objects (eval_ctx=0x6004001eda78, bmain=0x6050000ee888, scene=0x606600097508, scene_parent=0x606600097508)
    at /home/i7deb64/blender-2.5-svn/__work__/src/source/blender/blenkernel/intern/scene.c:1520
#14 0x00000000037dfafb in scene_update_tagged_recursive (eval_ctx=0x6004001eda78, bmain=0x6050000ee888, scene=0x606600097508, scene_parent=0x606600097508)
    at /home/i7deb64/blender-2.5-svn/__work__/src/source/blender/blenkernel/intern/scene.c:1534
#15 0x00000000037e02f4 in BKE_scene_update_for_newframe_ex (eval_ctx=0x6004001eda78, bmain=0x6050000ee888, sce=0x606600097508, lay=3072, do_invisible_flush=false)
    at /home/i7deb64/blender-2.5-svn/__work__/src/source/blender/blenkernel/intern/scene.c:1691
#16 0x00000000037e00ba in BKE_scene_update_for_newframe (eval_ctx=0x6004001eda78, bmain=0x6050000ee888, sce=0x606600097508, lay=3072)
    at /home/i7deb64/blender-2.5-svn/__work__/src/source/blender/blenkernel/intern/scene.c:1627
#17 0x0000000002981f05 in RE_Database_FromScene (re=0x607201c77d08, bmain=0x6050000ee888, scene=0x606600097508, lay=3072, use_camera_view=1)
    at /home/i7deb64/blender-2.5-svn/__work__/src/source/blender/render/intern/source/convertblender.c:5165
#18 0x00000000029e024e in do_render_3d (re=0x607201c77d08) at /home/i7deb64/blender-2.5-svn/__work__/src/source/blender/render/intern/source/pipeline.c:1232
#19 0x00000000029e31d2 in do_render_fields_blur_3d (re=0x607201c77d08) at /home/i7deb64/blender-2.5-svn/__work__/src/source/blender/render/intern/source/pipeline.c:1539
#20 0x00000000029e7dac in do_render_composite_fields_blur_3d (re=0x607201c77d08) at /home/i7deb64/blender-2.5-svn/__work__/src/source/blender/render/intern/source/pipeline.c:2133
#21 0x00000000029e9b7e in do_render_all_options (re=0x607201c77d08) at /home/i7deb64/blender-2.5-svn/__work__/src/source/blender/render/intern/source/pipeline.c:2344
#22 0x00000000029ebf73 in RE_BlenderFrame (re=0x607201c77d08, bmain=0x6050000ee888, scene=0x606600097508, srl=0x0, camera_override=0x0, lay_override=0, frame=66, write_still=false)
    at /home/i7deb64/blender-2.5-svn/__work__/src/source/blender/render/intern/source/pipeline.c:2671
#23 0x000000000275202b in render_startjob (rjv=0x602e005b0308, stop=0x6028000be43c, do_update=0x6028000be43a, progress=0x6028000be440)
    at /home/i7deb64/blender-2.5-svn/__work__/src/source/blender/editors/render/render_internal.c:586
#24 0x0000000001d21d12 in do_job_thread (job_v=0x6028000be3c8) at /home/i7deb64/blender-2.5-svn/__work__/src/source/blender/windowmanager/intern/wm_jobs.c:330
---Type <return> to continue, or q <return> to quit---
#25 0x0000000003bf3aa8 in tslot_thread_start (tslot_p=0x600c007639a8) at /home/i7deb64/blender-2.5-svn/__work__/src/source/blender/blenlib/intern/threads.c:251
#26 0x00007ffff4e67a58 in ?? () from /usr/lib/x86_64-linux-gnu/libasan.so.0
#27 0x00007ffff2a89062 in start_thread (arg=0x7fffca25b700) at pthread_create.c:312
#28 0x00007fffec2b3bfd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:111

Lukas, seems to be in your area, care to check further?

Crash confirmed, but not sure that (huge!) file is valid, it spit a bunch of depsgraph errors… Anyway, gets a NULL dm, so segfaults: [P64: (An Untitled Masterwork)](https://archive.blender.org/developer/P64.txt) ``` Program received signal SIGSEGV, Segmentation fault. [Switching to Thread 0x7fffca25b700 (LWP 3481)] 0x00000000037229fe in psys_map_index_on_dm (dm=0x0, from=2, index=1, index_dmcache=-1, fw=0x7fffcab2b8a8, UNUSED_foffset=1,37508976, mapindex=0x7fffca258ac0, mapfw=0x7fffca258b40) at /home/i7deb64/blender-2.5-svn/__work__/src/source/blender/blenkernel/intern/particle.c:1724 1724 if (dm->deformedOnly || index_dmcache == DMCACHE_ISCHILD) { (gdb) bt #0 0x00000000037229fe in psys_map_index_on_dm (dm=0x0, from=2, index=1, index_dmcache=-1, fw=0x7fffcab2b8a8, UNUSED_foffset=1,37508976, mapindex=0x7fffca258ac0, mapfw=0x7fffca258b40) at /home/i7deb64/blender-2.5-svn/__work__/src/source/blender/blenkernel/intern/particle.c:1724 #1 0x0000000003722f7b in psys_particle_on_dm (dm=0x0, from=2, index=1, index_dmcache=-1, fw=0x7fffcab2b8a8, foffset=1,37508976, vec=0x7fffca258cb0, nor=0x0, utan=0x0, vtan=0x0, orco=0x601e008e7ec8, ornor=0x0) at /home/i7deb64/blender-2.5-svn/__work__/src/source/blender/blenkernel/intern/particle.c:1788 #2 0x0000000003724172 in psys_particle_on_emitter (psmd=0x601c000670c8, from=2, index=1, index_dmcache=-1, fuv=0x7fffcab2b8a8, foffset=1,37508976, vec=0x7fffca258cb0, nor=0x0, utan=0x0, vtan=0x0, orco=0x601e008e7ec8, ornor=0x0) at /home/i7deb64/blender-2.5-svn/__work__/src/source/blender/blenkernel/intern/particle.c:1920 #3 0x00000000037436c8 in psys_get_dupli_texture (psys=0x603a000d3e48, part=0x603e0044c6c8, psmd=0x601c000670c8, pa=0x7fffcab2b808, cpa=0x0, uv=0x601e008e7ed4, orco=0x601e008e7ec8) at /home/i7deb64/blender-2.5-svn/__work__/src/source/blender/blenkernel/intern/particle.c:4525 #4 0x00000000036f2933 in make_duplis_particle_system (ctx=0x7fffca259790, psys=0x603a000d3e48) at /home/i7deb64/blender-2.5-svn/__work__/src/source/blender/blenkernel/intern/object_dupli.c:1104 #5 0x00000000036f2dc1 in make_duplis_particles (ctx=0x7fffca2598e0) at /home/i7deb64/blender-2.5-svn/__work__/src/source/blender/blenkernel/intern/object_dupli.c:1143 #6 0x00000000036f32c4 in object_duplilist_ex (eval_ctx=0x6004001eda78, scene=0x606600097508, ob=0x604a003c9c08, update=false) at /home/i7deb64/blender-2.5-svn/__work__/src/source/blender/blenkernel/intern/object_dupli.c:1203 #7 0x00000000037dca5d in BKE_scene_base_iter_next (eval_ctx=0x6004001eda78, iter=0x7fffca259cd0, scene=0x7fffca259b10, val=1, base=0x7fffca259b50, ob=0x7fffca259b90) at /home/i7deb64/blender-2.5-svn/__work__/src/source/blender/blenkernel/intern/scene.c:878 #8 0x000000000364845b in mball_count (eval_ctx=0x6004001eda78, process=0x7fffca259e00, scene=0x606600097508, basis=0x604a003f4d08) at /home/i7deb64/blender-2.5-svn/__work__/src/source/blender/blenkernel/intern/mball.c:2234 #9 0x00000000036485ea in BKE_mball_polygonize (eval_ctx=0x6004001eda78, scene=0x606600097508, ob=0x604a003f4d08, dispbase=0x6008002a5c58) at /home/i7deb64/blender-2.5-svn/__work__/src/source/blender/blenkernel/intern/mball.c:2280 #10 0x00000000034d14ad in BKE_displist_make_mball (eval_ctx=0x6004001eda78, scene=0x606600097508, ob=0x604a003f4d08) at /home/i7deb64/blender-2.5-svn/__work__/src/source/blender/blenkernel/intern/displist.c:731 #11 0x00000000036e4858 in BKE_object_handle_update_ex (eval_ctx=0x6004001eda78, scene=0x606600097508, ob=0x604a003f4d08, rbw=0x0, do_proxy_update=true) at /home/i7deb64/blender-2.5-svn/__work__/src/source/blender/blenkernel/intern/object.c:2931 #12 0x00000000037dec4f in scene_update_all_bases (eval_ctx=0x6004001eda78, scene=0x606600097508, scene_parent=0x606600097508) at /home/i7deb64/blender-2.5-svn/__work__/src/source/blender/blenkernel/intern/scene.c:1296 #13 0x00000000037df9f6 in scene_update_objects (eval_ctx=0x6004001eda78, bmain=0x6050000ee888, scene=0x606600097508, scene_parent=0x606600097508) at /home/i7deb64/blender-2.5-svn/__work__/src/source/blender/blenkernel/intern/scene.c:1520 #14 0x00000000037dfafb in scene_update_tagged_recursive (eval_ctx=0x6004001eda78, bmain=0x6050000ee888, scene=0x606600097508, scene_parent=0x606600097508) at /home/i7deb64/blender-2.5-svn/__work__/src/source/blender/blenkernel/intern/scene.c:1534 #15 0x00000000037e02f4 in BKE_scene_update_for_newframe_ex (eval_ctx=0x6004001eda78, bmain=0x6050000ee888, sce=0x606600097508, lay=3072, do_invisible_flush=false) at /home/i7deb64/blender-2.5-svn/__work__/src/source/blender/blenkernel/intern/scene.c:1691 #16 0x00000000037e00ba in BKE_scene_update_for_newframe (eval_ctx=0x6004001eda78, bmain=0x6050000ee888, sce=0x606600097508, lay=3072) at /home/i7deb64/blender-2.5-svn/__work__/src/source/blender/blenkernel/intern/scene.c:1627 #17 0x0000000002981f05 in RE_Database_FromScene (re=0x607201c77d08, bmain=0x6050000ee888, scene=0x606600097508, lay=3072, use_camera_view=1) at /home/i7deb64/blender-2.5-svn/__work__/src/source/blender/render/intern/source/convertblender.c:5165 #18 0x00000000029e024e in do_render_3d (re=0x607201c77d08) at /home/i7deb64/blender-2.5-svn/__work__/src/source/blender/render/intern/source/pipeline.c:1232 #19 0x00000000029e31d2 in do_render_fields_blur_3d (re=0x607201c77d08) at /home/i7deb64/blender-2.5-svn/__work__/src/source/blender/render/intern/source/pipeline.c:1539 #20 0x00000000029e7dac in do_render_composite_fields_blur_3d (re=0x607201c77d08) at /home/i7deb64/blender-2.5-svn/__work__/src/source/blender/render/intern/source/pipeline.c:2133 #21 0x00000000029e9b7e in do_render_all_options (re=0x607201c77d08) at /home/i7deb64/blender-2.5-svn/__work__/src/source/blender/render/intern/source/pipeline.c:2344 #22 0x00000000029ebf73 in RE_BlenderFrame (re=0x607201c77d08, bmain=0x6050000ee888, scene=0x606600097508, srl=0x0, camera_override=0x0, lay_override=0, frame=66, write_still=false) at /home/i7deb64/blender-2.5-svn/__work__/src/source/blender/render/intern/source/pipeline.c:2671 #23 0x000000000275202b in render_startjob (rjv=0x602e005b0308, stop=0x6028000be43c, do_update=0x6028000be43a, progress=0x6028000be440) at /home/i7deb64/blender-2.5-svn/__work__/src/source/blender/editors/render/render_internal.c:586 #24 0x0000000001d21d12 in do_job_thread (job_v=0x6028000be3c8) at /home/i7deb64/blender-2.5-svn/__work__/src/source/blender/windowmanager/intern/wm_jobs.c:330 ---Type <return> to continue, or q <return> to quit--- #25 0x0000000003bf3aa8 in tslot_thread_start (tslot_p=0x600c007639a8) at /home/i7deb64/blender-2.5-svn/__work__/src/source/blender/blenlib/intern/threads.c:251 #26 0x00007ffff4e67a58 in ?? () from /usr/lib/x86_64-linux-gnu/libasan.so.0 #27 0x00007ffff2a89062 in start_thread (arg=0x7fffca25b700) at pthread_create.c:312 #28 0x00007fffec2b3bfd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:111 ``` Lukas, seems to be in your area, care to check further?
Member

Don't think this can possibly be fixed, this file combines just about every broken feature in blender ...

The ultimate reason for the failure is one of the copious amount of dependency cycles. Because of this the particle system which is instanced by a metaball apparently is not calculated in time, which then leaves a NULL pointer during the calculation of particle duplis. We could add lots of NULL checks everywhere, but that won't solve the issue: there is no guarantee for sane data when you have cyclic dependencies ...

Don't think this can possibly be fixed, this file combines just about every broken feature in blender ... The ultimate reason for the failure is one of the copious amount of dependency cycles. Because of this the particle system which is instanced by a metaball apparently is not calculated in time, which then leaves a NULL pointer during the calculation of particle duplis. We could add lots of NULL checks everywhere, but that won't solve the issue: there is no guarantee for sane data when you have cyclic dependencies ...

This issue was referenced by 79fe023ec6

This issue was referenced by 79fe023ec6a405a5de7bf30195b7ea94938e8a99
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 79fe023ec6.

Closed by commit 79fe023ec6.
Member

Added a NULL check now to prevent crashing, but don't expect the result to be correct and it could crash again in some other situation ...

Added a NULL check now to prevent crashing, but don't expect the result to be correct and it could crash again in some other situation ...
Author
Member

Well, the thing is there is no real cyclic dependency as far as I know -

there is - parent empty,on which there are objects that have particle system on them,
the particle systems instance metaballs.
these object also have a field as a child.
But, still I don't see any cylcle - the field is child of the object transform, not the particles...

But thanks a lot for fixing this now and so fast. I did 2 reports in last 2 days, and both got fixed in just a few hours. Big thanks to all the devs.

Well, the thing is there is no real cyclic dependency as far as I know - there is - parent empty,on which there are objects that have particle system on them, the particle systems instance metaballs. these object also have a field as a child. But, still I don't see any cylcle - the field is child of the object transform, not the particles... But thanks a lot for fixing this now and so fast. I did 2 reports in last 2 days, and both got fixed in just a few hours. Big thanks to all the devs.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40299
No description provided.