Fix T40299, Crash on rendering due to dependency cycles and NULL pointer when using particle duplis.